quase tudo certo

--- a/views/admin/cabecalho.ejs
+++ b/views/admin/cabecalho.ejs
@@ -17,10 +17,10 @@
             </div>
             <ul class="menu">
                 <li><a href="/">Início</a></li>
-                <li><a href="/admin/viagem/lst">viagems</a></li>
-                <li><a href="/admin/aeroporto/lst">aeroportoes</a></li>
-                <li><a href="/admin/viagem/add">Adicionar viagem</a></li>
-                <li><a href="/admin/aeroporto/add">Adicionar aeroporto</a></li>
+                <li><a href="/admin/usuario/lst">Acessar Usuário</a></li>
+                <li><a href="/admin/cotacao/lst">Cotações</a></li>
+                <li><a href="/admin/aeroporto/lst">Aeroportos</a></li>
+                <li><a href="/admin/companhia/lst">Companhias Aéreas</a></li>
             </ul>
         </nav>
     </header>
