--- a/views/admin/companhia/edt.ejs
+++ b/views/admin/companhia/edt.ejs
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Informações do Aeroporto</title>
+    <title>Editar Informações da Companhia Aérea</title>
    
     <link rel="stylesheet" href="/css/style.css">
 
