--- a/views/admin/companhia/lst.ejs
+++ b/views/admin/companhia/lst.ejs
@@ -4,7 +4,7 @@
 
  
 
-    <h1>Aeroportos</h1>
+    <h1>Companhias Aéreas</h1>
     <div class="add-time">
 
         <table>
@@ -12,30 +12,7 @@
                 <tr>
                     <th>Nome</th>
                     <th>Localização</th>
-                  
-
-
-
- 
-
-                 
-                    <div class="add-aeroporto">
-                
-                        <table>
-                            <thead>
-                                <tr>
-                           
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- <tr>
-                                    <td>geromel</td>
-                                    <td>2.00</td>
-                                    <td>80 kg</td>
-                                    <td>lateral</td> -->
-                </body>
-                
-                </html></tr>
+                </tr>
             </thead>
             <tbody>
 
@@ -44,15 +21,21 @@
                     <td>2.00</td>
                     <td>80 kg</td>
                     <td>lateral</td> -->
+
+
+
                     <td class="options">
                         <a href="/admin/aeroporto/edt">Editar</a>
                         <a href="/admin/aeroporto/lst">Desligar</a>
                     </td>
+
                 </tr>
 
             </tbody>
+
         </table>
         <a href="/admin/aeroporto/add"> Adicionar aeroporto</a>
+
 </body>
 
 </html>
