--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -19,7 +19,7 @@
         </main>
 
        
-        <a href="admin/viagem/lst">Lista de viagens</a>
+        <a href="admin/cotacao/lst">Lista de Cotações</a>
     </body>
 
     </html>
