--- a/views/admin/usuario/lst.ejs
+++ b/views/admin/usuario/lst.ejs
@@ -4,33 +4,15 @@
 
 
 
-    <h1>aeroporto</h1>
+    <h1>Usuários</h1>
     <div class="add-time">
 
         <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Altura</th>
-                    <th>Peso</th>
-                    <th>Posição
-                    </th>
-
-                </tr>
-            </thead>
-            <tbody>
-
-                <tr>
-                    <td>geromel</td>
-                    <td>2.00</td>
-                    <td>80 kg</td>
-                    <td>lateral</td>
-
 
 
                     <td class="options">
-                        <a href="/admin/aeroporto/edt">Editar</a>
-                        <a href="/admin/aeroporto/lst">Desligar</a>
+                        <a href="/admin/usuario/edt">Editar</a>
+                        <a href="/admin/usuario/lst">Desligar</a>
                     </td>
 
                 </tr>
@@ -38,7 +20,7 @@
             </tbody>
 
         </table>
-        <a href="/admin/aeroporto/add"> Adicionar aeroporto</a>
+        <a href="/admin/usuario/add"> Adicionar Usuário</a>
 
         </body>
 
