--- a/views/admin/aeroporto/add.ejs
+++ b/views/admin/aeroporto/add.ejs
@@ -7,38 +7,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adicionar aeroporto</title>
+    <title>Adicionar Aeroporto</title>
     <link rel="stylesheet" href="/css/style.css">
    
 </head>
 
 <body>
-    <div class="container">
+    <div class="form-box">
         <h1>Adicionar aeroporto</h1>
         <form action="#">
             <label for="nome">Nome</label>
             <input type="text" id="nome" placeholder="Digite o nome do aeroporto"><br>
 
-            <label for="estadio">Time</label>
-            <input type="text" id="estadio" placeholder="Digite o nome do time"><br>
+            <label for="localizacao">Localização</label>
+            <input type="text" id="localizacao" placeholder="Digite a localização do aeroporto" ><br>
 
-            <label for="nova-altura">Altura</label>
-            <input type="number" id="nova-altura" value="Estádio 1"><br>
-
-            <label for="novo-peso">Peso</label>
-            <input type="number" id="novo-peso" value="Estádio 1"><br>
-
-            <label for="posicao">Posição:</label>
-     <select id="posicao" name="posicao">
-    <option value="goleiro">Goleiro</option>
-    <option value="zagueiro">Zagueiro</option>
-    <option value="lateral">Lateral</option>
-    <option value="volante">Volante</option>
-    <option value="meia">Meia</option>
-    <option value="atacante">Atacante</option>
-</select>
-
-
+            <!-- <label for="foto">Foto</label> -->
+            <!-- <input type="number" id="novo-peso" ><br> -->
 
             <button type=" submit">Adicionar </button>
 
