--- a/views/admin/companhia/add.ejs
+++ b/views/admin/companhia/add.ejs
@@ -1,26 +1,23 @@
-
 <%-include('../cabecalho.ejs') %>
 
+
 <!DOCTYPE html>
-
-
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Informações do Aeroporto</title>
-   
+    <title>Adicionar Companhia Aérea</title>
     <link rel="stylesheet" href="/css/style.css">
-
+   
 </head>
 
 <body>
     <div class="container">
-        <h1>Editar Informações do aeroporto</h1>
-        <form action="/admin/aeroporto/edt" method="post">
+        <h1>Adicionar aeroporto</h1>
+        <form action="#">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" placeholder="Digite o nome do aeroporto" ><br> <!-- Agora com fundo mais claro -->
+            <input type="text" id="nome" placeholder="Digite o nome do aeroporto"><br>
 
             <label for="localizacao">Localização</label>
             <input type="text" id="localizacao" placeholder="Digite a localização do aeroporto" ><br>
@@ -28,12 +25,12 @@
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
 
-            <button type="submit">Editar</button>
-        </form>
+            <button type=" submit">Adicionar </button>
 
-        <div class="form-footer">
-            <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
-        </div>
+            <div class="form-footer">
+                <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
+            </div>
+        </form>
     </div>
 </body>
 
