--- a/views/admin/usuario/add.ejs
+++ b/views/admin/usuario/add.ejs
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adicionar usuario</title>
+    <title>Adicionar Usuário</title>
     <link rel="stylesheet" href="/css/style.css">
    
 </head>
@@ -17,27 +17,16 @@
         <h1>Adicionar usuario</h1>
         <form action="#">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" placeholder="Digite o nome do usuario"><br>
+            <input type="text" id="nome" placeholder="Digite seu nome"><br>
 
-            <label for="estadio">Time</label>
-            <input type="text" id="estadio" placeholder="Digite o nome do time"><br>
+            <label for="email">Email</label>
+            <input type="text" id="email" placeholder="Digite seu email"><br>
 
-            <label for="nova-altura">Altura</label>
-            <input type="number" id="nova-altura" value="Estádio 1"><br>
+            <label for="cpf">CPF</label>
+            <input type="text" id="cpf" placeholder="Digite seu CPF" ><br>
 
-            <label for="novo-peso">Peso</label>
-            <input type="number" id="novo-peso" value="Estádio 1"><br>
-
-            <label for="posicao">Posição:</label>
-     <select id="posicao" name="posicao">
-    <option value="goleiro">Goleiro</option>
-    <option value="zagueiro">Zagueiro</option>
-    <option value="lateral">Lateral</option>
-    <option value="volante">Volante</option>
-    <option value="meia">Meia</option>
-    <option value="atacante">Atacante</option>
-</select>
-
+            <label for="telefone">Celular</label>
+            <input type="text" id="telefone" placeholder="Digite o N° do seu celular" ><br>
 
 
             <button type=" submit">Adicionar </button>
