--- a/views/admin/usuario/edt.ejs
+++ b/views/admin/usuario/edt.ejs
@@ -1,59 +1,43 @@
-
 <%-include('../cabecalho.ejs') %>
 
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 
-<html lang="pt-br">
+    <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Informações do aeroporto</title>
-   
-    <link rel="stylesheet" href="/css/style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Editar Informações do Usuário</title>
 
-</head>
+        <link rel="stylesheet" href="/css/style.css">
 
-<body>
-    <div class="container">
-        <h1>Editar Informações do aeroporto</h1>
-        <form action="/admin/aeroporto/edt" method="post">
-            <label for="nome-atual">Nome</label>
-            <input type="text" id="nome" value="Inter" ><br> <!-- Agora com fundo mais claro -->
+    </head>
 
-            <label for="Time">Time</label>
-            <input type="text" id="Time" value="Inter" ><br> 
+    <body>
+        <div class="container">
+            <h1>Editar Informações do Usuário</h1>
+            <form action="/admin/usuario/edt" method="post">
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" placeholder="Digite seu nome"><br>
 
-            <label for="altural">Altura</label>
-            <input type="number" id="altural" value="Beira-Rio" ><br> <!-- Agora com fundo mais claro -->
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Digite seu email"><br>
 
-            <label for="peso">Peso</label>
-            <input type="number" id="peso" value="Beira-Rio" ><br>
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf" placeholder="Digite seu CPF"><br>
 
-            <label for="posicao">Posição</label>
-     <select id="posicao" name="posicao">
-    <option value="goleiro">Goleiro</option>
-    <option value="zagueiro">Zagueiro</option>
-    <option value="lateral">Lateral</option>
-    <option value="volante">Volante</option>
-    <option value="meia">Meia</option>
-    <option value="atacante">Atacante</option>
-</select>
-
-           
+                <label for="telefone">Celular</label>
+                <input type="text" id="telefone" placeholder="Digite o N° do seu celular"><br>
 
 
+                <button type="submit">Editar</button>
+            </form>
 
-           
-
-            <button type="submit">Editar</button>
-        </form>
-
-        <div class="form-footer">
-            <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
+            <div class="form-footer">
+                <p>Voltar para a <a href="/admin/usuario/lst">Página Inicial</a></p>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
-</html>
+    </html>
