--- a/views/admin/aeroporto/add.ejs
+++ b/views/admin/aeroporto/add.ejs
@@ -22,8 +22,8 @@
             <label for="localizacao">Localização</label>
             <input type="text" id="localizacao" placeholder="Digite a localização do aeroporto" ><br>
 
-            <!-- <label for="foto">Foto</label> -->
-            <!-- <input type="number" id="novo-peso" ><br> -->
+             <label for="foto">Foto</label> 
+             <input type="text" id="novo-peso" ><br> 
 
             <button type=" submit">Adicionar </button>
 
