--- a/views/admin/companhia/add.ejs
+++ b/views/admin/companhia/add.ejs
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Adicionar aeroporto</h1>
+    <div class=" form-container">
+        <h1>Adicionar companhia</h1>
         <form action="#">
             <label for="nome">Nome</label>
             <input type="text" id="nome" placeholder="Digite o nome do aeroporto"><br>
@@ -28,7 +28,7 @@
             <button type=" submit">Adicionar </button>
 
             <div class="form-footer">
-                <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
+                <p>Voltar para a <a href="/admin/companhia/lst">Página Inicial</a></p>
             </div>
         </form>
     </div>
