--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -7,14 +7,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-        <title>Document</title>
+        <title>Travelfontes</title>
     </head>
 
     <body>
        
         <main>
-            <h1>Bem-vindo ao FutBoard</h1>
-            <p>Aqui você encontra a plataforma para gerenciar suas estatísticas e escalações.
+            <h1>Seja bem vindo ao Travelfontes!</h1>
+            <p>Aonde as suas viagens se tornam acessíveis.
             </p>
         </main>
 
