--- a/views/admin/cabecalho.ejs
+++ b/views/admin/cabecalho.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FutBoard</title>
+    <title>Travelfontes</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="/">🏆 FutBoard</a>
+                <a href="/">Travelfontes</a>
             </div>
             <ul class="menu">
                 <li><a href="/">Início</a></li>
