--- a/views/admin/cotacao/add.ejs
+++ b/views/admin/cotacao/add.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-        <form action="#">
+        <form action="" method="post">
             
             <label for="origem">Origem</label>
             <select class="form-select"  id="origem" name="origem required">
@@ -46,7 +46,7 @@
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
 
-            <button type=" submit">Adicionar </button>
+            <button type="submit">Adicionar </button>
 
             <div class="form-footer">
                 <p>Voltar para a <a href="/admin/cotacao/lst">Cotações</a></p>
