--- a/views/admin/companhia/edt.ejs
+++ b/views/admin/companhia/edt.ejs
@@ -18,13 +18,15 @@
 <body>
     <div class="container">
         <h1>Editar Informações do aeroporto</h1>
-        <form action="/admin/aeroporto/edt" method="post">
+        <form action="" method="post">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" placeholder="Digite o nome do aeroporto" ><br> <!-- Agora com fundo mais claro -->
+                <input type="text" name="nome" id="nome" placeholder="Digite o nome do aeroporto"><br>
+ 
+                <label for="pais">País</label>
+                <input type="text" name="pais" id="pais" placeholder="Digite a país do aeroporto"><br>
 
-            <label for="localizacao">Localização</label>
-            <input type="text" id="localizacao" placeholder="Digite a localização do aeroporto" ><br>
-
+                <label for="foto">Foto</label>
+                <input type="text" name="foto" id="foto" placeholder="Digite a foto do aeroporto"><br>
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
 
@@ -32,7 +34,7 @@
         </form>
 
         <div class="form-footer">
-            <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
+            <p>Voltar para a <a href="/admin/companhia/lst">Página Inicial</a></p>
         </div>
     </div>
 </body>
