--- a/views/admin/usuario/add.ejs
+++ b/views/admin/usuario/add.ejs
@@ -15,18 +15,18 @@
 <body>
     <div class="container">
         <h1>Adicionar usuario</h1>
-        <form action="#">
+        <form action="#" method="post">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" placeholder="Digite seu nome"><br>
+            <input type="text"  name="nome" id="nome" placeholder="Digite seu nome"><br>
 
             <label for="email">Email</label>
-            <input type="text" id="email" placeholder="Digite seu email"><br>
+            <input type="text"  name="email" id="email" placeholder="Digite seu email"><br>
 
             <label for="cpf">CPF</label>
-            <input type="text" id="cpf" placeholder="Digite seu CPF" ><br>
+            <input type="text"  name="cpf" id="cpf" placeholder="Digite seu CPF" ><br>
 
             <label for="telefone">Celular</label>
-            <input type="text" id="telefone" placeholder="Digite o N° do seu celular" ><br>
+            <input type="number" name="telefone" id="telefone" placeholder="Digite o N° do seu celular" ><br>
 
 
             <button type=" submit">Adicionar </button>
