--- a/views/admin/usuario/edt.ejs
+++ b/views/admin/usuario/edt.ejs
@@ -17,18 +17,18 @@
     <body>
         <div class="container">
             <h1>Editar Informações do Usuário</h1>
-            <form action="/admin/usuario/edt" method="post">
+            <form action="" method="post">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome" placeholder="Digite seu nome"><br>
+                <input type="text"  name="nome" id="nome" placeholder="Digite seu nome"><br>
 
                 <label for="email">Email</label>
-                <input type="text" id="email" placeholder="Digite seu email"><br>
+                <input type="text" name="email" id="email" placeholder="Digite seu email"><br>
 
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" placeholder="Digite seu CPF"><br>
+                <input type="text" name="cpf" id="cpf" placeholder="Digite seu CPF"><br>
 
                 <label for="telefone">Celular</label>
-                <input type="text" id="telefone" placeholder="Digite o N° do seu celular"><br>
+                <input type="text" name="telefone" id="telefone" placeholder="Digite o N° do seu celular"><br>
 
 
                 <button type="submit">Editar</button>
