quase tudo certyo, ver eddts

--- a/views/admin/aeroporto/lst.ejs
+++ b/views/admin/aeroporto/lst.ejs
@@ -31,7 +31,8 @@
             </tr>
             <% }) %>
         </tbody>
-    </table>
+    </table><tr>
+      
 
     <!-- Link para adicionar um novo aeroporto -->
     <a href="/admin/aeroporto/add" class="btn add">Adicionar Aeroporto</a>
