--- a/views/admin/usuario/add.ejs
+++ b/views/admin/usuario/add.ejs
@@ -12,7 +12,7 @@
    
 </head>
 
-<body>
+<body>     
     <div class="container">
         <h1>Adicionar usuario</h1>
         <form action="#" method="post">
@@ -28,8 +28,9 @@
             <label for="telefone">Celular</label>
             <input type="number" name="telefone" id="telefone" placeholder="Digite o N° do seu celular" ><br>
 
+            <button type="submit" class="btn add">Adicionar</button>
 
-            <button type=" submit">Adicionar </button>
+           
 
             <div class="form-footer">
                 <p>Voltar para a <a href="/admin/usuario/lst">Página Inicial</a></p>
